# NepalEntityService

./: .env.example  .flake8  .gitignore  DATABASE_SETUP.md  Dockerfile  README.md  USAGE_EXAMPLES.md  district_contacts.json  main.py  pyproject.toml  sample_entities.json  test_files.py
.github/workflows/: ci.yml  migration-preview.yml
docs/: api-reference.md  architecture.md  data-maintainer-guide.md  data-models.md  examples.md  index.md  migration-architecture.md  migration-contributor-guide.md  migration-maintainer-guide.md
docs/consumers/: api-guide.md  data-models.md  examples.md  getting-started.md
docs/contributors/: batch-entity-lookup-design.md  contributor-guide.md  database-setup.md  migration-architecture.md  migration-maintainer-guide.md
docs/templates/: documentation.html
etc/: specs.yml
examples/: README.md  batch_import.py  create_relationship.py  update_entity.py  version_history.py  wikipedia_scraper_demo.py
migrations/: README.md
migrations/000-example-migration/: migrate.py
migrations/001-source-locations/: migrate.py
migrations/006-source-hospitals/: migrate.py
migrations/007-source-projects/: README.md  migrate.py  project_matcher.py
migrations/008-complete-political-parties/: README.md  (+2 more)
nes/: __init__.py  cli.py  config.py
nes2/: config.py
notebooks/: 01_entity_management.ipynb  02_relationship_management.ipynb  03_data_import_workflow.ipynb  04_data_quality_analysis.ipynb  README.md
scripts/: README.md  format.sh
tests/: __init__.py  conftest.py  test_config_database_url.py  test_version.py
tests2/: conftest.py
(+799 files in other folders)
