[tool.poetry]
name = "nepalentityservice"
version = "0.1.0"
description = ""
authors = ["Damodar Dahal <damo94761@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wikipedia = "^1.4.0"
pydantic = "^2.12.3"
fastapi = {extras = ["standard"], version = "^0.120.4"}
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
)/
'''
